fix column not wrapping

--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -205,11 +205,21 @@
 }
 
 @keyframes expand {
-    100% {
-        transform: translateX(-50%);
     
+    100% {
+        transform: scale(3);
     }
 
+}
+
+@keyframes fadeLeft {
+    0% {
+        transform: translateX(0);
+    }
+    
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 @keyframes fadeIn {
