--- a/styles.css
+++ b/styles.css
@@ -218,15 +218,11 @@ h1 {
 
 /* -------------------------------matchup --------------------------------*/
 
-#vsbron {
-    position: absolute;
-    height: 50%;
-    top: 30%;
-    left:50%;
-}
-
 #vscurry {
+    height: 90%;
     position: absolute;
+    top:10vh;
+    left:5%;
 }
 
 #test {
@@ -235,16 +231,13 @@ h1 {
     left:120%;
     display:none;
     animation: expand; 
-    animation-duration: 1s;
-    timing-function delay:0;
-    iteration-count:1;
+    animation-duration:2s;
+    animation-iteration-count:1;
     animation-fill-mode:forwards;
     
 }
 
-#vsbrontest:hover #test {
-    display:block;
-}
+
 
 
 
